[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-josie"
version = "0.1.0"
description = "Python port of the JOSIE top-k set similarity join algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9",
    "polars>=0.20",
    "pandas>=2.0",
    "pyarrow"
]
keywords = ["josie", "similarity", "duckdb", "polars", "set-similarity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
authors = [
    { name = "Chao Zhang", email = "chao.zhang@uwaterloo.ca" }
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["josie_indexing", "josie_online"]

[project.urls]
Homepage = "https://github.com/chaozhang-cs/py-josie"
Documentation = "https://github.com/chaozhang-cs/py-josie#readme"
Source = "https://github.com/chaozhang-cs/py-josie"
Issues = "https://github.com/chaozhang-cs/py-josie/issues"
